--- a/TP12/public/index.html
+++ b/TP12/public/index.html
@@ -30,6 +30,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/api/products-test">Mock-up Generator</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/info">Info</a>
+                    </li>
                     <li class="nav-item" id="login-button">
                     </li>
                 </ul>
