--- a/TP12/public/pages/signUp.html
+++ b/TP12/public/pages/signUp.html
@@ -29,6 +29,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="../api/products-test">Mock-up Generator</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../info">Info</a>
+                    </li>
                 </ul>
             </div>
         </div>
